--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Alex</title>
+    <title>Alex Resume</title>
 </head>
 <body>
     <header>
@@ -47,24 +47,72 @@
             <div class="col-md-4 bg-color-personnal-info section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="section-heading uppercase">Personnal Info</h3>
+                    </div>
+                </div>
+                <div class="personnal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p class="uppercase">
+                            Alexandre Nypels
+                        </p>
+                    </div>
+                </div>
+                <div class="personnal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p class="uppercase">
+                            Lewisham SE13, LONDON UK
+                        </p>
+                    </div>
+                </div>
+                <div class="personnal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Phone Number:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p class="uppercase">
+                            07 802 354 504
+                        </p>
+                    </div>
+                </div>
+                <div class="personnal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p class="uppercase">
+                            nypels.alexandre@outlook.com
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">My Skills</h3>
+                        <h3 class="section-heading uppercase">About Me</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
                                     I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
                                 </p>
@@ -74,12 +122,25 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-cogs" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
                                     I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me??</h4>
+                                <p>
+                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
                                 </p>
                             </div>
                         </div>
