--- a/index.html
+++ b/index.html
@@ -24,16 +24,22 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menuContainer">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuItem">
+                            <li class="col-6 col-sm-2 ui-menu-color-home list-inline-item menuItem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuItem">
+                            <li class="col-6 col-sm-2 ui-menu-color-resume list-inline-item menuItem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuItem">
+                            <li class="col-6 col-sm-2 ui-menu-color-contact list-inline-item menuItem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuItem">
+                            <li class="col-6 col-sm-2 ui-menu-color-interests list-inline-item menuItem">
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                            </li>
+                            <li class="col-6 col-sm-2 ui-menu-color-github list-inline-item menuItem">
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                            </li>
+                            <li class="col-6 col-sm-2 ui-menu-color-download list-inline-item menuItem">
                                 <a href="assets/cv/resume.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                         </ul>
